--- a/Projeto PI/home.html
+++ b/Projeto PI/home.html
@@ -13,7 +13,7 @@
   <body class="aligncenter">
     <p class="aligncenter">
       <img
-        src="C:\Users\João\Desktop\Projeto py\Projeto PI - Site\imagem\Diagrama_PI.png"
+        src="ProjetoPI/raw/main/Projeto%20PI/imagem/Diagrama_PI.png"
         alt="centered image"
       />
     </p>
