--- a/ProjetoPI/home.html
+++ b/ProjetoPI/home.html
@@ -13,7 +13,7 @@
   <body class="aligncenter">
     <p class="aligncenter">
       <img
-        src="C:\Users\João\Desktop\ProjetoPI\imagem\DiagramaPI.png"
+        src="/ProjetoPI/imagem/DiagramaPI.png"
         alt="centered image"
       />
     </p>
